@@ -15,6 +15,10 @@ Changelog
 - Refactor robots tests.
   [bsuttor]
 
+- Add b_size field. We can choose batch size (number of element visible on one
+  page) for a view with this field.
+  [bsuttor]
+
 
 1.0.11 (2013-08-13)
 -------------------
